cards&cat&gauge&respo&likeDislike&Removebtn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
         "name": "next"
       }
     ],
+    "paths": {
+      "@/*": ["./*"]
+    },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
